--- a/aMovieDatabase/core/templates/base.html
+++ b/aMovieDatabase/core/templates/base.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">A movie database</a>
+      <a class="navbar-brand" href="#">A Movie Database</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -20,6 +20,9 @@
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Movies</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
