--- a/aMovieDatabase/core/templates/home.html
+++ b/aMovieDatabase/core/templates/home.html
@@ -6,7 +6,7 @@
   <div class="container mt-5">
     <div class="d-flex justify-content-center">
     <h1>A Movie Database</h1>
-    <p>Here you can find information about movies, TV shows, and other entertainment content.</p>
+    <p>Here you can find information about movies, TV shows, and other entertainment content...</p>
     <a href="#" class="btn btn-primary">Browse Movies</a>
     </div>
   </div>
