--- a/aMovieDatabase/core/templates/login.html
+++ b/aMovieDatabase/core/templates/login.html
@@ -1,24 +1,39 @@
 {% extends "base.html" %}
-{% load static %}
-
+ {% load static %}
 {% block content %}
-  <div class="container mt-5">
-    <div class="row justify-content-center">
-      <div class="col-lg-4 center">
-        <form method="post" action="{% url 'login' %}" class="form-signin">
-          {% csrf_token %}
-          <h1 class="h3 mb-3 font-weight-normal text-center">Please sign in</h1>
-          <div class="form-group">
-            {{ form.username.label_tag }}
-            {{ form.username }}
-          </div>
-          <div class="form-group clearfix">
-            {{ form.password.label_tag }}
-            {{ form.password }}
-          </div>
-          <input type="submit" value="Log in" class="btn btn-primary btn-block">
-        </form>
-      </div>
-    </div>
-  </div>
-{% endblock %}
+<head>
+      <link rel="stylesheet" type="text/css" href="{%static 'style.css' %}">
+</head>
+<body>
+<div class="login-form">
+        <form method="post" action="{% url 'login' %}" >
+               {% csrf_token %}
+        <h2 class="text-center">Log in</h2>
+             {{ form.as_p }}
+            {% if messages %}
+  <ul class="messages">
+    {% for message in messages %}
+      <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+  </ul>
+{% endif %}
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Username" name="username" required="required">
+        </div>
+        <div class="form-group">
+            <input type="password" class="form-control" placeholder="Password" name="password" required="required">
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-block">Log in</button>
+        </div>
+        <div class="clearfix">
+            <label class="float-left form-check-label"><input type="checkbox"> Remember me</label>
+            <a href="#" class="float-right">Forgot Password?</a>
+        </div>
+    </form>
+    <p class="text-center"><a href="/register">Create an Account</a></p>
+</div>
+</body>
+</html>
+
+  {% endblock %}
