--- a/aMovieDatabase/core/templates/login.html
+++ b/aMovieDatabase/core/templates/login.html
@@ -8,7 +8,8 @@
 <div class="login-form">
         <form method="post" action="{% url 'login' %}" >
                {% csrf_token %}
-        <h2 class="text-center">Log in</h2>
+            <h2>Login</h2>
+		<p class="hint-text">Welcome back! Log in to access your account.</p>
              {{ form.as_p }}
             {% if messages %}
   <ul class="messages">
