--- a/aMovieDatabase/accounts/templates/register.html
+++ b/aMovieDatabase/accounts/templates/register.html
@@ -2,39 +2,86 @@
 {% load static %}
 
 {% block content %}
-<div class="container mt-5">
-  <div class="d-flex align-items-center h-100">
-    <div class="mx-auto w-50">
-      <form method="post" action="{% url 'register' %}" class="form-signin">
-        {% csrf_token %}
-        <h1 class="h3 mb-3 font-weight-normal text-center">Please register</h1>
-        <div class="form-group">
-          <label for="username">Username:</label>
-          <input type="text" name="username" class="form-control" id="username">
-        </div>
-        <div class="form-group">
-          <label for="first_name">First Name:</label>
-          <input type="text" name="first_name" class="form-control" id="first_name">
-        </div>
-        <div class="form-group">
-          <label for="last_name">Last Name:</label>
-          <input type="text" name="last_name" class="form-control" id="last_name">
-        </div>
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" name="email" class="form-control" id="email">
-        </div>
-        <div class="form-group">
-          <label for="password1">Password:</label>
-          <input type="password" name="password1" class="form-control" id="password1">
-        </div>
-        <div class="form-group">
-          <label for="password2">Confirm Password:</label>
-          <input type="password" name="password2" class="form-control" id="password2">
-        </div>
-        <button type="submit" class="btn btn-primary btn-block">Register</button>
-      </form>
+
+<body style="background-color: rgb(74, 97, 116); color: aliceblue;">
+  <br>
+  <!-- Including pop-up messages -->
+
+  {% if messages %}
+  <ul class="messages" style="margin-left: 10%; margin-right: 10%;">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+      {% endfor %}
+  </ul>
+  {% endif %}
+  <div class="container mt-5">
+    <div class="d-flex align-items-center h-100">
+      <div class="mx-auto w-50">
+        <form method="post" action="{% url 'register' %}" class="form-signin">
+          {% csrf_token %}
+          <h1 class="h3 mb-3 font-weight-normal text-center">Please register</h1>
+          <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" name="username" class="form-control" id="username">
+          </div>
+          <div class="form-group">
+            <label for="first_name">First Name:</label>
+            <input type="text" name="first_name" class="form-control" id="first_name">
+          </div>
+          <div class="form-group">
+            <label for="last_name">Last Name:</label>
+            <input type="text" name="last_name" class="form-control" id="last_name">
+          </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" name="email" class="form-control" id="email">
+          </div>
+          <div class="form-group">
+            <label for="password1">Password:</label>
+            <input type="password" name="password1" class="form-control" id="password1">
+          </div>
+          <div class="form-group">
+            <label for="password2">Confirm Password:</label>
+            <input type="password" name="password2" class="form-control" id="password2">
+          </div>
+          <div class="form-group">
+            <label for="date_of_birth">Date of birth:</label>
+            <input type="date" name="date_of_birth" class="form-control" id="date_of_birth">
+          </div>
+          <script>
+            function checkChecked() {
+              var checkboxes = document.querySelectorAll('input[type=checkbox]');
+              var checkedCount = 0;
+              for (var i = 0; i < checkboxes.length; i++) {
+                if (checkboxes[i].checked) {
+                  checkedCount++;
+                }
+                if (checkedCount > 3) {
+                  checkboxes[i].checked = false;
+                }
+              }
+            }
+          </script>
+
+          <label class="form-check-label" for="top_genres_{{ genre.id }}">Select 3 favourite genres:</label><br>
+          <div style="height: 100px; overflow-y: scroll; border: 1px solid gray; padding: 5px;">
+            {% for genre in form.top_genres.field.queryset %}
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" name="top_genres" id="top_genres_{{ genre.id }}"
+                value="{{ genre.id }}" onclick="checkChecked()">
+              <label class="form-check-label" for="top_genres_{{ genre.id }}">{{ genre.name }}</label>
+            </div>
+            {% endfor %}
+          </div>
+          <br>
+
+          <button type="submit" class="btn btn-primary btn-block">Register</button>
+          <br>
+          <p class="text-center" style="background-color: aliceblue; width: 20%;"><a href="/login">Sign In</a></p>
+        </form>
+      </div>
     </div>
   </div>
-</div>
+
+</body>
 {% endblock %}
