--- a/aMovieDatabase/core/templates/base.html
+++ b/aMovieDatabase/core/templates/base.html
@@ -13,7 +13,7 @@
   <title>{% block title %}{% endblock %}</title>
 </head>
 
-<body>
+<body style="background-color: rgb(74, 97, 116); color: aliceblue;">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">A Movie Database</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -32,16 +32,22 @@
           <a class="nav-link" href="#">Contact</a>
         </li>
       </ul>
+
       <ul class="navbar-nav ml-auto">
         {% if not user.is_authenticated %}
         <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Register</a></li>
         {% else %}
+        {% if request.user.is_authenticated %}
+        <li class="nav-item"><a class="nav-link" href="#"><strong>{{request.user.first_name}}</strong></a></li>
+        {% endif %}
         <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
         {% endif %}
-      </ul>      
+      </ul>
     </div>
   </nav>
+
+
 
   {% block content %}{% endblock %}
 
@@ -57,5 +63,40 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 </body>
+<style>
+  .messages {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .messages li {
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    padding: 10px;
+  }
+
+  .messages li.success {
+    border-color: #4caf50;
+    color: #4caf50;
+  }
+
+  .messages li.error {
+    border-color: #f44336;
+    color: #f44336;
+  }
+
+  .messages li.warning {
+    border-color: #ff9800;
+    color: #ff9800;
+  }
+
+  .messages li.info {
+    border-color: #2196f3;
+    color: #2196f3;
+  }
+</style>
 
 </html>
