Add a toast messages for login/register and also some bug fix.

--- a/aMovieDatabase/core/templates/base.html
+++ b/aMovieDatabase/core/templates/base.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,38 +8,19 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <title>{% block title %}{% endblock %}</title>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="/">A Movie Database</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Movies</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-          {% if not user.is_authenticated %}
-            <li class="nav-item mx-2"><a href="{% url 'login' %}">Login</a></li>
-            <li class="nav-item mx-2"><a href="{% url 'register' %}">Register</a></li>
-          {% else %}
-            <li class="nav-item mx-2"><a href="{% url 'logout' %}">Logout</a></li>
-          {% endif %}
-        </ul>
-      </div>
-    </nav>
 
-    {% block content %}{% endblock %}
+  <body>
+          {% include "includes/navbar.html" %}
+          {% include "includes/messages.html" %}
+  <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
+
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -52,6 +32,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+
+
+  <script>
+    $(document).ready(function() {
+                $('.toast').toast({
+  delay: 2000
+})
+        $('.toast').toast('show');
+    });
+
+</script>
+
     </body>
 </html>
 
