--- a/aMovieDatabase/accounts/templates/register.html
+++ b/aMovieDatabase/accounts/templates/register.html
@@ -10,23 +10,23 @@
           {% csrf_token %}
 		<h2>Register</h2>
 		<p class="hint-text">Create your account. It's free and only takes a minute.</p>
-            <div class="form-group">
-            <input type="text" class="form-control" name="username" placeholder="Username" required="required">
+               <div class="form-group">
+            <input type="text" class="form-control" name="username" placeholder="Username" required="required" value="{{ form.username.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
 			<div class="row">
-				<div class="col"><input type="text" class="form-control" name="first_name" placeholder="First Name" required="required"></div>
-				<div class="col"><input type="text" class="form-control" name="last_name" placeholder="Last Name" required="required"></div>
+				<div class="col"><input type="text" class="form-control" name="first_name" placeholder="First Name" required="required" value="{{ form.first_name.value|default_if_none:'' }}"></div>
+				<div class="col"><input type="text" class="form-control" name="last_name" placeholder="Last Name" required="required" value="{{ form.last_name.value|default_if_none:'' }}"></div>
 			</div>
         </div>
         <div class="form-group">
-        	<input type="email" class="form-control" name="email" placeholder="Email" required="required">
+        	<input type="email" class="form-control" name="email" placeholder="Email" required="required" value="{{ form.email.value|default_if_none:'' }}" >
         </div>
 		<div class="form-group">
-            <input type="password" class="form-control" name="password" placeholder="Password" required="required">
+            <input type="password" class="form-control" name="password" placeholder="Password" required="required" value="{{ form.password.value|default_if_none:'' }}">
         </div>
 		<div class="form-group">
-            <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" required="required">
+            <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" required="required" value="{{ form.confirm_password.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
 			<label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
