--- a/aMovieDatabase/accounts/templates/register.html
+++ b/aMovieDatabase/accounts/templates/register.html
@@ -29,11 +29,16 @@
             <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" required="required" value="{{ form.confirm_password.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
+    <input type="date" class="form-control" name="dateBirth" placeholder="Date of Birth" required="required" value="{{ form.dateBirth.value|default_if_none:'' }}">
+</div>
+
+        <div class="form-group">
 			<label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
 		</div>
-		<div class="form-group">
+    		<div class="form-group">
             <button type="submit" class="btn btn-success btn-lg btn-block">Register Now</button>
         </div>
+
     </form>
 	<div class="text-center">Already have an account? <a href="/login">Sign in</a></div>
 </div>
