--- a/aMovieDatabase/core/templates/includes/navbar.html
+++ b/aMovieDatabase/core/templates/includes/navbar.html
@@ -8,6 +8,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Movies</a>
           </li>
+            <li class="nav-item">
+            <a class="nav-link" href="/reviews">Reviews</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
           </li>
