--- a/aMovieDatabase/reviews/templates/reviews.html
+++ b/aMovieDatabase/reviews/templates/reviews.html
@@ -10,27 +10,33 @@
 </head>
 
 <body>
+<section>
+    <div class="container">
 
-<section class="details-card">
-  <div class="container">
-    <div class="row">
-      {% for review in reviews %}
-        <div class="col-md-4">
-          <div class="card-content">
-            <div class="card-img">
-              <img src="img.png=" alt="">
-              <span><h4>{{ review.title }}</h4></span>
-            </div>
-            <div class="card-desc">
-              <h3>{{ review.author }}</h3>
-              <span><h4><a href="{% url 'author_detail' review.title %}">Read</a></h4></span>
-            </div>
+      <div class="section-title">
+         <div class="row">
+        <div class="col-lg-12 d-flex justify-content-center">
+          <ul>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row">
+            {% for obj in content.movie_data %}
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="wrap">
+             <a href="{% url 'author_detail' obj.caption  %}">
+            <img src="{{ obj.image }}"  class="img-fluid" alt="">
+            <div class="info">
+        <h4 style="text-align:center;"><a href="{% url 'author_detail' obj.caption  %}">{{obj.caption}}</a></h4>
+      </div>
           </div>
         </div>
-      {% endfor %}
-    </div>
-  </div>
-</section>
+          {% endfor %}
+       </div>
+      </div>
+  </section>
+
 
 
 
