--- a/aMovieDatabase/accounts/static/style.css
+++ b/aMovieDatabase/accounts/static/style.css
@@ -116,3 +116,77 @@
     height: 500px;
     margin-top: 20px;
 }
+/* REVIEW AUTHOR DETAILS */
+.comment-container {
+	width: 100%;
+	border: 1px solid #ddd;
+	margin-bottom: 20px;
+  }
+   
+  .comment-header {
+	display: flex;
+	align-items: center;
+	padding: 20px;
+	border-bottom: 1px solid #ddd;
+  }
+   
+  .comment-author-pic-container {
+	margin-right: 20px;
+  }
+   
+  .comment-author-pic {
+	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+  }
+   
+  .comment-header-text {
+	flex: 1;
+  }
+   
+  .comment-header h3 {
+	margin: 0;
+	font-size: 18px;
+	font-weight: bold;
+	color: #333;
+  }
+   
+  .comment-header span {
+	display: block;
+	font-size: 14px;
+	color: #777;
+	margin-top: 5px;
+  }
+   
+  .comment-body {
+	padding: 20px;
+  }
+   
+  .comment-body p {
+	font-size: 14px;
+	line-height: 1.5;
+	margin: 0;
+	color: #333;
+  }
+
+  /* REVIEWS DETAILS */
+
+.img-fluid{
+    width: 500px;
+    height: 500px;
+    margin-top: 20px;
+}
+
+.review-image-container {
+    width: 100%;
+    text-align: left;
+}
+
+.review-image {
+    width: 100%;
+    height: auto;
+}
+
+.col-9 {
+  box-shadow: 0 8px 10px -5px rgba(0, 0, 0, 0.4), 0 -8px 10px -5px rgba(0, 0, 0, 0.4), 8px 0 10px -5px rgba(0, 0, 0, 0.4), -8px 0 10px -5px rgba(0, 0, 0, 0.4);
+}
