--- a/aMovieDatabase/core/templates/includes/navbar.html
+++ b/aMovieDatabase/core/templates/includes/navbar.html
@@ -6,10 +6,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Movies</a>
-          </li>
-            <li class="nav-item">
-            <a class="nav-link" href="/reviews">Reviews</a>
+            <a class="nav-link" href="/movies">Movies</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
