--- a/aMovieDatabase/reviews/templates/author_list.html
+++ b/aMovieDatabase/reviews/templates/author_list.html
@@ -1,29 +1,37 @@
-{% extends "base.html" %}
- {% load static %}
-
-
-
-
+{% load static %}
+ 
 {% block content %}
-<div class="container">
+ 
+<head>
+    <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="{%static 'style.css' %}">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+</head>
+ 
+ 
+ <body>
+ <div class="container">
   <div class="row">
     {% for review in reviews %}
-      <div class="col-md-4">
-        <div class="card-content">
-          <div class="card-img">
-            <img src="img.png" alt="">
-            <span><h4>{{ review.title }}</h4></span>
+      <div class="comment-container">
+        <div class="comment-header">
+          <div class="comment-author-pic-container">
+            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png"  class="comment-author-pic">
           </div>
-          <div class="card-desc">
-              <div class="author-card">
-                <h3>{{ review.author  }}</h3>
-                <span><h4><a href="{% url 'review_detail' review.title review.author %}">Read</a></h4></span>
-              </div>
+          <div class="comment-header-text">
+            <h3>A review by  {{review.author }}</h3>
+            <span>{{ review.author }}</span>
           </div>
         </div>
+       <div class="comment-body">
+  <p>{{ review.content|truncatechars:200|safe|linebreaks }} <a href="{% url 'review_detail' review.title review.author %}">Read More</a></p>
+</div>
+ 
       </div>
     {% endfor %}
   </div>
 </div>
-
-  {% endblock %}
+ 
+ 
+</body>
+{% endblock %}
