--- a/aMovieDatabase/movies/templates/movie_info.html
+++ b/aMovieDatabase/movies/templates/movie_info.html
@@ -9,7 +9,7 @@
         <div class="card-body p-5">
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <img src="{{ review_image.image }}" class="img-fluid rounded" alt="Movie Poster">
+                    <img src="{{ movie_image.image }}" class="img-fluid rounded" alt="Movie Poster">
                 </div>
                 <div class="col-md-8">
                     <h1 class="font-weight-bold mb-3">{{ movie.title }}</h1>
