--- a/aMovieDatabase/movies/templates/movies.html
+++ b/aMovieDatabase/movies/templates/movies.html
@@ -12,13 +12,13 @@
       <div class="section-title">
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
-            <h2 class="font-weight-bold text-light mb-3">Featured Movies</h2>
+            <h2 class="font-weight-bold text-light mb-3">All Movies</h2>
           </div>
         </div>
       </div>
       <div class="row">
         {% for movie in movies %}
-          {% for review_image in review_images %}
+          {% for review_image in movie_image %}
             {% if review_image.caption == movie.title %}
               <div class="col-lg-4 col-md-6 mb-4 border-dark">
                 <div class="card h-100 shadow-sm bg-dark ">
@@ -34,8 +34,32 @@
           {% endfor %}
         {% endfor %}
       </div>
-    </div>
-  </section>
+     {% if movies.has_other_pages %}
+  <ul class="pagination">
+    {% if movies.has_previous %}
+      <li class="page-item"><a class="page-link" href="?page={{ movies.previous_page_number }}">Previous</a></li>
+    {% endif %}
+
+    {% for page_number in movies.paginator.page_range %}
+      {% if movies.number|add:'-3' <= page_number and page_number <= movies.number|add:'3' %}
+        {% if page_number == movies.number %}
+          <li class="page-item active"><a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a></li>
+        {% else %}
+          <li class="page-item"><a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a></li>
+        {% endif %}
+      {% elif movies.paginator.page_range|slice:'1:3' == page_number|slice:'1:3' or movies.paginator.page_range|slice:'-3:None' == page_number|slice:'-3:None' %}
+        <li class="page-item disabled"><a class="page-link" href="#">...</a></li>
+      {% endif %}
+    {% endfor %}
+
+    {% if movies.has_next %}
+      <li class="page-item"><a class="page-link" href="?page={{ movies.next_page_number }}">Next</a></li>
+    {% endif %}
+  </ul>
+{% endif %}
+
+</div>
+</section>
 </body>
 
 <style>
