--- a/aMovieDatabase/reviews/templates/review_detail.html
+++ b/aMovieDatabase/reviews/templates/review_detail.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="row">
         <div class="col-3 review-image-container">
-          <img src="{{ review_image.image }}" alt="{{ review.title }}" class="review-image">
+          <img src="{{ movie_image.image }}" alt="{{ review.title }}" class="review-image">
         </div>
         <div class="col-9">
           <h1 class="review-title">{{ review.title }}</h1>
