--- a/aMovieDatabase/core/templates/home.html
+++ b/aMovieDatabase/core/templates/home.html
@@ -1,11 +1,107 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Home{% endblock %}
 
 {% block content %}
-  <div class="container mt-5">
-    <h1>A Movie Database</h1>
-    <p>Here you can find information about movies, TV shows, and other entertainment content.</p>
-    <a href="#" class="btn btn-primary">Browse Movies</a>
-  </div>
+
+<head>
+  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+  <style>
+    
+    body{
+      background-image: url('https://wallpaperaccess.com/full/1091558.jpg');
+    }
+
+    .row a{
+      text-decoration: none;
+    }
+
+    .movie-card {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: rgb(26, 25, 25);
+      color: rgb(213, 225, 235);
+      border: 1px solid aliceblue;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      transition: 0.3s;
+      margin: 1em;
+      width: 18em;
+      text-align: center;
+    }
+
+    .movie-card:hover {
+      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    }
+
+    .movie-card img {
+      height: 20em;
+      object-fit: cover;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+    }
+
+    .movie-card h5 {
+      font-weight: bold;
+      margin: 0.5em;
+    }
+
+    .movie-card p {
+      font-size: 0.8em;
+      margin: 0.5em;
+    }
+
+    section {
+      margin-top: 15px;
+      margin-bottom: 15px;
+      border: 1px solid black;
+      border-radius: 10px 20px 30px 40px; /* top-left, top-right, bottom-right, bottom-left */
+    }
+
+    .fa-star {
+      color: orange;
+      font-size: 1.5em;
+    }
+
+
+  </style>
+</head>
+
+<body>
+  <section class="bg-dark">
+    <div class="container mt-5">
+      <div class="section-title">
+        <div class="row">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <h2 class="font-weight-bold text-light mb-3">Highest Rated Movies</h2>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        {% for movie in sorted_movies %}
+        {% for review_image in review_images %}
+        {% if review_image.caption == movie.title %}
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="movie-card">
+            <a href="{{ movie.title }}">
+              <img src="{{ review_image.image }}" class="card-img-top" style="margin-top: 10px;" alt="Movie Poster">
+              <div class="card-body">
+                <h5 class="card-title">{{ movie.title }}</h5>
+                <p style="color: aliceblue;">{{ movie.vote_average }}/10 <i class="fas fa-star"></i>
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+        {% endfor %}
+      </div>
+    </div>
+  </section>
+</body>
 {% endblock %}
