--- a/aMovieDatabase/accounts/static/style.css
+++ b/aMovieDatabase/accounts/static/style.css
@@ -122,52 +122,90 @@
 	border: 1px solid #ddd;
 	margin-bottom: 20px;
   }
-   
+
   .comment-header {
 	display: flex;
 	align-items: center;
 	padding: 20px;
 	border-bottom: 1px solid #ddd;
   }
-   
+
   .comment-author-pic-container {
 	margin-right: 20px;
   }
-   
+
   .comment-author-pic {
 	border-radius: 50%;
 	width: 50px;
 	height: 50px;
   }
-   
+
   .comment-header-text {
 	flex: 1;
   }
-   
+
   .comment-header h3 {
 	margin: 0;
 	font-size: 18px;
 	font-weight: bold;
 	color: #333;
   }
-   
+
   .comment-header span {
 	display: block;
 	font-size: 14px;
 	color: #777;
 	margin-top: 5px;
   }
-   
+
   .comment-body {
 	padding: 20px;
   }
-   
+
   .comment-body p {
 	font-size: 14px;
 	line-height: 1.5;
 	margin: 0;
 	color: #333;
   }
+
+
+form input[type="text"],
+form textarea {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+form input[type="submit"] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+form input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.error {
+  color: red;
+  margin-top: 10px;
+}
+
+
+
+
+
+
 
   /* REVIEWS DETAILS */
 
