--- a/aMovieDatabase/accounts/static/style.css
+++ b/aMovieDatabase/accounts/static/style.css
@@ -204,9 +204,6 @@ form input[type="submit"]:hover {
 
 
 
-
-
-
   /* REVIEWS DETAILS */
 
 .img-fluid{
@@ -233,4 +230,84 @@ form input[type="submit"]:hover {
    display: flex;
   justify-content: center;
   align-items: center;
+}
+
+ .vote-average {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: black;
+    color: white;
+    border: 3px solid green;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.8em;
+    font-weight: bold;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
+  }
+
+.vote-average:before {
+  content: '\2605';
+  transform: rotate(70deg);
+}
+  .card-subtitle{
+  color:gray;
+  }
+
+  /* FILTER  */
+
+
+  .filter {
+    position: fixed;
+    top: 80px;
+    left: 0;
+    width: 200px;
+    height: calc(100% - 50px);
+    background-color: white;
+    padding: 30px;
+  }
+
+
+.filter label {
+  font-size: 1rem;
+  color: white;
+  margin-right: 0.5rem;
+}
+
+.filter select {
+  margin-left: 1rem;
+  width: 150px;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+}
+
+.filter button {
+  margin-left: 1rem;
+  width: 100px;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+  border-radius: 0.25rem;
+}
+
+.filter button:hover {
+  background-color: #0069d9;
+  border-color: #0062cc;
 }
