--- a/aMovieDatabase/movies/templates/movie_info.html
+++ b/aMovieDatabase/movies/templates/movie_info.html
@@ -12,7 +12,7 @@
                     <img src="{{ movie_image.image }}" class="img-fluid rounded" alt="Movie Poster">
                 </div>
                 <div class="col-md-8">
-                    <h1 class="font-weight-bold mb-3">{{ movie.title }}</h1>
+                    <h1 class="font-weight-bold mb-3">{{ movie.title }} ( {{movie.release_date|date:"Y" }} )</h1>
                     <p class="lead mb-4">
                         {% for genre in movie.genres %}
                         <span style="background-color:rgb(112, 116, 116) ;" class="badge badge-primary p-2 mr-2">{{ genre }}</span>
