--- a/aMovieDatabase/movies/templates/movies.html
+++ b/aMovieDatabase/movies/templates/movies.html
@@ -9,6 +9,28 @@
 <body style="background-color: rgb(26, 25, 25);">
   <section class="bg-dark">
     <div class="container mt-5">
+  <div class="filter bg-dark">
+  <form action="" method="GET">
+    <label for="genre-filter" >Genre:</label>
+    <select id="genre-filter" name="genre" class="form-control">
+      <option value="" {% if genre is None %}selected{% endif %}>All</option>
+      {% for available_genre in available_genres %}
+        <option value="{{ available_genre }}" {% if available_genre == genre %}selected{% endif %}>{{ available_genre }}</option>
+      {% endfor %}
+    </select>
+    <label for="year-filter">Release Year:</label>
+    <select id="year-filter" name="year" class="form-control">
+      <option value="" {% if selected_year is None %}selected{% endif %}>All</option>
+      {% for year in years %}
+        <option value="{{ year|date:"Y" }}" {% if year|date:"Y" == selected_year %}selected{% endif %}>{{ year|date:"Y" }}</option>
+      {% endfor %}
+    </select>
+    <button type="submit" class="btn btn-primary">Filter</button>
+  </form>
+</div>
+
+
+      </div>
       <div class="section-title">
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
@@ -24,8 +46,10 @@
                 <div class="card h-100 shadow-sm bg-dark ">
                   <a href="details/{{ movie.title }}">
                     <img src="{{ review_image.image }}" class="card-img-top" alt="Movie Poster">
+                    <div class="vote-average">{{ movie.vote_average }}</div>
                     <div class="card-body bg-dark">
                       <h5 class="card-title font-weight-bold text-light">{{ movie.title }}</h5>
+                           <h4 class="card-subtitle">{{ movie.release_date }}</h4>
                     </div>
                   </a>
                 </div>
