--- a/aMovieDatabase/reviews/templates/review_detail.html
+++ b/aMovieDatabase/reviews/templates/review_detail.html
@@ -18,7 +18,7 @@
         <div class="col-9">
           <h1 class="review-title">{{ review.title }}</h1>
           <h2 class="review-author">Author: {{ review.author }}</h2>
-          <div class="review-content">
+          <div class="review-content" style="color: white; background-color: rgb(73, 68, 68); padding: 5%; border-radius: 10px; border: solid;">
             {{ review.content|safe|linebreaks }}
           </div>
         </div>
