--- a/aMovieDatabase/accounts/static/style.css
+++ b/aMovieDatabase/accounts/static/style.css
@@ -87,7 +87,7 @@
 	font-size: 16px;
 	font-weight: bold;
 	min-width: 140px;
-	outline: none !important;
+	outline: none ;
 }
 .signup-form .row div:first-child {
 	padding-right: 10px;
@@ -190,3 +190,60 @@
 .col-9 {
   box-shadow: 0 8px 10px -5px rgba(0, 0, 0, 0.4), 0 -8px 10px -5px rgba(0, 0, 0, 0.4), 8px 0 10px -5px rgba(0, 0, 0, 0.4), -8px 0 10px -5px rgba(0, 0, 0, 0.4);
 }
+
+/* movies */
+
+body{
+	background-image: url('https://wallpaperaccess.com/full/1091558.jpg');
+  }
+
+  .row a{
+	text-decoration: none;
+  }
+
+  .movie-card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: rgb(36, 36, 35);
+	color: rgb(213, 225, 235);
+	border: 2px solid rgb(0, 4, 8);
+	border-radius: 10px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.3s;
+	margin: 1em;
+	width: 18em;
+	text-align: center;
+  }
+
+  .movie-card:hover {
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  }
+
+  .movie-card img {
+	height: 20em;
+	object-fit: cover;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+  }
+
+  .movie-card h5 {
+	font-weight: bold;
+	margin: 0.5em;
+  }
+
+  .movie-card p {
+	font-size: 0.8em;
+	margin: 0.5em;
+  }
+
+  section {
+	margin-top: 15px;
+	margin-bottom: 15px;
+	border: 1px solid black;
+  }
+
+  .fa-star {
+	color: orange;
+	font-size: 1.5em;
+  }
