--- a/aMovieDatabase/core/templates/includes/navbar.html
+++ b/aMovieDatabase/core/templates/includes/navbar.html
@@ -1,9 +1,9 @@
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg ">
       <a class="navbar-brand" href="/">A Movie Database</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarNav" >
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="/movies">Movies</a>
@@ -16,13 +16,34 @@
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-          {% if not user.is_authenticated %}
-            <li class="nav-item mx-2"><a href="{% url 'login' %}">Login</a></li>
-            <li class="nav-item mx-2"><a href="{% url 'register' %}">Register</a></li>
-          {% else %}
-            <li class="nav-item mx-2"><a href="#">{{ user.username }}</a></li>
-            <li class="nav-item mx-2"><a href="{% url 'logout' %}">Logout</a></li>
+          {% if user.is_authenticated %}
+          <li class="nav-item mx-2"><a href="#">{{ user.username }}</a></li>
+          <li class="nav-item mx-2"><a href="{% url 'logout' %}">Logout</a></li>
           {% endif %}
         </ul>
       </div>
     </nav>
+
+
+
+
+
+
+
+
+<style>
+
+.navbar a,
+.navbar button {
+  color: white;
+}
+
+.navbar a:hover,
+.navbar button:hover {
+  background-color: rgb(3, 3, 3);
+  color: rgb(251, 249, 249);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+
+</style>
