--- a/aMovieDatabase/movies/templates/movies.html
+++ b/aMovieDatabase/movies/templates/movies.html
@@ -6,33 +6,26 @@
 <head>
   <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
-<body style="background-color: rgb(26, 25, 25);">
-  <section class="bg-dark">
+<body style="background-color: aliceblue; background-image: url('https://t3.ftcdn.net/jpg/02/66/14/94/360_F_266149478_uV3E2THnewWN5jaAdoxraB6TjwLQyqXi.jpg')">
+  <section  style="align-content: center; border: solid rgb(9, 1, 1) 15px; border-radius: 20px; background-image: url('https://wallpaperaccess.com/full/1091558.jpg');">
     <div class="container mt-5">
+      <div class="section-title">
+        <div class="row d-flex justify-content-center">
+          {% include 'featured_movies.html' %}
+        </div>        
+      </div>
+    </div>
+      <hr>
+    </section>
+
+    <section class="bg-dark">
+
       <div class="section-title">
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
-            <h2 class="font-weight-bold text-light mb-3">Featured Movies</h2>
+            <h2 class="font-weight-bold text-light mb-3">All Movies</h2>
           </div>
         </div>
-      </div>
-      <div class="row">
-        {% for movie in movies %}
-          {% for review_image in review_images %}
-            {% if review_image.caption == movie.title %}
-              <div class="col-lg-4 col-md-6 mb-4 border-dark">
-                <div class="card h-100 shadow-sm bg-dark ">
-                  <a href="{{ movie.title }}">
-                    <img src="{{ review_image.image }}" class="card-img-top" alt="Movie Poster">
-                    <div class="card-body bg-dark">
-                      <h5 class="card-title font-weight-bold text-light">{{ movie.title }}</h5>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            {% endif %}
-          {% endfor %}
-        {% endfor %}
       </div>
     </div>
   </section>
