--- a/aMovieDatabase/movies/templates/featured_movies.html
+++ b/aMovieDatabase/movies/templates/featured_movies.html
@@ -24,7 +24,7 @@
           <img src="{{ review_image.image }}" class="card-img-top" style="margin-top: 10px;" alt="Movie Poster">
           <div class="card-body">
             <h5 class="card-title">{{ movie.title }}</h5>
-            <p style="color: aliceblue;">{{ movie.vote_average }}/10 <i class="fas fa-star"></i>
+            <div class="vote-average" style="color: aliceblue;">{{ movie.vote_average }}</div>
             </p>
           </div>
         </a>
