--- a/aMovieDatabase/movies/templates/movie_info.html
+++ b/aMovieDatabase/movies/templates/movie_info.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="mr-5">
                         <hr>
-                        {{ movie.runtime }} minutes
+                        {{ formatted_runtime  }}
                     </div>
                     <br>
                     <div class="mr-5 font-weight-bold text-secondary">
