--- a/aMovieDatabase/core/templates/home.html
+++ b/aMovieDatabase/core/templates/home.html
@@ -9,7 +9,7 @@
 
 <body style="height: 100%; width: 100%; background-image: url('https://wallpaper.dog/large/20493501.jpg')">
   <div class="welcome-section">
-    <h1 style="text-align: center;">Welcome to <span style="color: orange;">A</span>MovieDB</h1>
+    <h1 style="text-align: center;">Welcome to <span style="color: rgb(255, 0, 0);">A</span>MovieDB</h1>
     <p style="color: rgb(255, 255, 255);"><strong><span>The ultimate destination for movie lovers</span></strong></p>
     {% if not user.is_authenticated %}
     <a href="{% url 'login' %}" class="btn btn-lg btn-secondary">Log In</a>
@@ -80,7 +80,7 @@
   .welcome-section .btn {
     font-size: 18px;
     border-radius: 50px;
-    background-color: orange;
+    background-color: rgb(255, 0, 0);
     color: #fff;
     padding: 15px 30px;
     transition: 0.3s;
@@ -89,7 +89,7 @@
 
   .welcome-section .btn:hover {
     background-color: #fff;
-    color: orange;
+    color: rgb(255, 0, 0);
   }
 
   .welcome-section {
