--- a/aMovieDatabase/movies/templates/movies.html
+++ b/aMovieDatabase/movies/templates/movies.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
 <body style="background-color: aliceblue; background-image: url('https://t3.ftcdn.net/jpg/02/66/14/94/360_F_266149478_uV3E2THnewWN5jaAdoxraB6TjwLQyqXi.jpg')">
-  <section  style="align-content: center; border: solid rgb(9, 1, 1) 15px; border-radius: 20px; background-image: url('https://wallpaperaccess.com/full/1091558.jpg');">
+  <section  style="align-content: center; border: solid rgb(255, 0, 0) ; border-radius: 20px; background-image: url('https://wallpaperaccess.com/full/1091558.jpg');">
     <div class="container mt-5">
       <div class="section-title">
         <div class="row d-flex justify-content-center">
@@ -17,37 +17,57 @@
     </div>
       <hr>
     </section>
-  <section class="bg-dark">
-    <div class="container mt-5">
-      <div class="filter bg-dark">
-        <form action="" method="GET">
-          <label for="genre-filter" >Genre:</label>
-          <select id="genre-filter" name="genre" class="form-control">
-            <option value="" {% if genre is None %}selected{% endif %}>All</option>
-            {% for available_genre in available_genres %}
-              <option value="{{ available_genre }}" {% if available_genre == genre %}selected{% endif %}>{{ available_genre }}</option>
-            {% endfor %}
-          </select>
-          <label for="year-filter">Release Year:</label>
-          <select id="year-filter" name="year" class="form-control">
-            <option value="" {% if selected_year is None %}selected{% endif %}>All</option>
-            {% for year in years %}
-              <option value="{{ year|date:"Y" }}" {% if year|date:"Y" == selected_year %}selected{% endif %}>{{ year|date:"Y" }}</option>
-            {% endfor %}
-          </select>
-             <label for="vote-average-filter-min">Vote Average (min):</label>
-          <input type="number" id="vote-average-filter-min" name="vote_average_min" min="1" max="10" step="0.1" class="form-control" value="{{ vote_average_min|default:1 }}">
-          <label for="vote-average-filter-max">Vote Average (max):</label>
-          <input type="number" id="vote-average-filter-max" name="vote_average_max" min="1" max="10" step="0.1" class="form-control" value="{{ vote_average_max }}">
-          <button type="submit" class="btn btn-primary">Filter</button>
-        </form>
+    <section>
+      <div class="container mt-5">
+        <div class="card filter" style="border: solid rgb(252, 252, 252); border-radius: 20px; background-image: url('https://wallpaperaccess.com/full/1091558.jpg');">
+            <div class="card-body">
+              <form action="" method="GET">
+                <div class="form-group">
+                  <label for="genre-filter" >Genre:</label>
+                  <select id="genre-filter" name="genre" class="form-control" style="padding-left: 10%;">
+                    <option value="" {% if genre is None %}selected{% endif %}>All</option>
+                    {% for available_genre in available_genres %}
+                      <option value="{{ available_genre }}" {% if available_genre == genre %}selected{% endif %}>{{ available_genre }}</option>
+                    {% endfor %}
+                  </select>
+                </div>
+                <div class="form-group" name="filter">
+                  <label for="year-filter">Release Year:</label>
+                  <select id="year-filter" name="year" class="form-control">
+                    <option value="" {% if selected_year is None %}selected{% endif %}>All</option>
+                    {% for year in years %}
+                      <option value="{{ year|date:"Y" }}" {% if year|date:"Y" == selected_year %}selected{% endif %}>{{ year|date:"Y" }}</option>
+                    {% endfor %}
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="vote-average-filter-min">Vote Average (min):</label>
+                  <input type="number" id="vote-average-filter-min" name="vote_average_min" min="1" max="10" step="0.1" class="form-control" value="{{ vote_average_min|default:1 }}">
+                </div>
+                <div class="form-group">
+                  <label for="vote-average-filter-max">Vote Average (max):</label>
+                  <input type="number" id="vote-average-filter-max" name="vote_average_max" min="1" max="10" step="0.1" class="form-control" value="{{ vote_average_max }}">
+                </div>
+                <div class="form-group">
+                  <button type="submit" class="btn btn-primary">Filter</button>
+                </div>
+              </form>
+            </div>
+          </div>
       </div>
-</section>
+  </section>
+  
 
 
-<section  style="align-content: center; border: solid rgb(9, 1, 1) 15px; border-radius: 20px; background-image: url('https://wallpaperaccess.com/full/1091558.jpg');">
+<section  style="align-content: center; border: solid rgb(255, 0, 0); border-radius: 20px; background-image: url('https://wallpaperaccess.com/full/1091558.jpg');">
   <div class="container mt-5">
     <div class="section-title">
+      <div class="col-lg-12 d-flex justify-content-center">
+        <h2 class="font-weight-bold mb-3" style="color: white;">
+          All Movies
+        </h2>
+        
+      </div>
       <div class="row d-flex justify-content-center">
         {% for movie in movies %}
         {% for review_image in movie_image %}
